*** correction to last commit -- that was the wrong files *** styled the EditableItem text input, so it stretches to fill the element

--- a/front_end/src/components/EditableItem/EditableItem.css
+++ b/front_end/src/components/EditableItem/EditableItem.css
@@ -10,6 +10,12 @@
 .EditableItem .EITextArea {
 	flex-shrink: 0;
 	font-weight: 600;
+	flex-grow: 1;
+	margin: auto 0.5em;
+}
+
+.EditableItem .EITextInput {
+	width: 100%;
 }
 
 .EditableItem .EIButtonArea {
